-Working on IE fixes.

--- a/css/ie.css
+++ b/css/ie.css
@@ -1,2 +1,13 @@
 /*IE 8 + 9*/
 #sidebar_wrap .form-actions {padding: 0px 0px 0px 0px \0/IE9;}
+
+.ie8 .carousel_item_image img {
+	height: 193px;
+	width: 250px;
+}
+
+.ie8 .menu_wrap a {
+	font-size: 22px;
+	color: #444;
+	padding: 0px 25px;
+}
